# pypkgkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/hooks/: pre-push-check.sh
.claude/rules/: code-style.md  git-conventions.md  tdd-workflow.md  testing.md
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  cli-release.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  docs.yml  e2e.yml  release.yml  test-publish.yml
api/: index.html
api/SUMMARY/: index.html
api/pypkgkit/: index.html
api/pypkgkit/main/: index.html
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/src/pypkgkit/: __init__.py  __main__.py  cli.py  defaults.py  init_bridge.py  prompt.py  scaffold.py
cli/tests/: conftest.py  test_cli.py  test_defaults.py  test_init_bridge.py  test_prompt.py  test_scaffold.py
docs/: api.md  gen_ref_pages.py  index.md  publishing.md
hooks/: post_gen_project.py
python_package_template/: __init__.py  main.py
recipe/: meta.yaml
scripts/: init.py  init.sh  setup-repo.sh  update_headers.py
search/: search_index.json
src/pypkgkit/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_init.py  test_main.py  test_version.py
tests/e2e/: run-e2e.sh  verify-project.sh
tests/template/: conftest.py  test_init_file_ops.py  test_init_flags.py  test_init_license.py  test_init_validation.py  test_template_structure.py
{{cookiecutter.project_slug}}/: LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/actions/setup-uv/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  release.yml
{{cookiecutter.project_slug}}/docs/: gen_ref_pages.py  index.md
{{cookiecutter.project_slug}}/scripts/: update_headers.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_main.py  test_version.py
