[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.initial_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
license = "Apache-2.0"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
{%- for v in ["3.10", "3.11", "3.12", "3.13", "3.14"] if v.split('.')[1] | int >= cookiecutter.python_version.split('.')[1] | int %}
    "Programming Language :: Python :: {{ v }}",
{%- endfor %}
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues"
Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_name }}/"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.1",
    "properdocs>=1.6.7",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ruff]
# Target version enables modern syntax upgrades where possible
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
preview = true
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "D", # Core errors, warnings, isort, and docstrings
    "N",   # pep8-naming (Google style includes naming conventions)
    "UP",  # pyupgrade (modernizes syntax)
    "B",   # flake8-bugbear (catches design flaws/bugs)
    "SIM", # flake8-simplify (cleans up messy logic)
    "RUF", # Ruff's custom advanced rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests use class-based grouping; method docstrings are noisy.
"tests/*" = ["D102", "D103", "D104"]

[tool.ruff.format]
docstring-code-format = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/{{ cookiecutter.project_slug }}/__init__.py:__version__"]
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["{{ cookiecutter.project_slug }}"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
]
